# fastapi-dockerized-poetry-python11-pytest-alembic-auth_jwt-SQLAlchemy-postgres-pydantic-redis

./: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test  README.md  SchemaDB.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.sh  prestart.sh  pyproject.toml  requirements.txt  run.prod.sh  run.sh  traefik.dev.toml  traefik.prod.toml  wait_for_api.sh
app/: main.py
app/api/: deps.py
app/api/v1/: routes.py
app/api/v1/endpoints/: ping.py  user.py
app/config/: database.py  setting.py
app/db/: base_class.py  init_db.py  main.py
app/middleware/: middleware.py
app/models/: attachment.py  audit_log.py  base.py  category.py  item.py  project.py  project_categories.py  project_priorities.py  status.py  task.py  user.py
app/repository/: base.py  user.py
app/schemas/: audit.py  file_attachment.py  item.py  label.py  permission.py  project.py  project_category.py  role.py  status.py  task.py  task_comment.py  token.py  user.py  user_project.py  user_role.py
app/scripts/: backend_pre_start.py  initial_data.py
app/services/: attachment.py  audit.py  category.py  label.py  project.py  project_user.py  role.py  status.py  task.py  user.py
app/tests/: conftest.py
app/tests/api/v1/endpoints/: test_ping.py
app/utils/: env_var.py  logger.py  security.py
migrations/: env.py
migrations/versions/: 36d40fb49b7a_adds_user_table.py
