[tool.poetry]
name = "project-x"
version = "0.1.0"
description = ""
authors = ["Pablo Contreras <pacg1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
psycopg2-binary = "^2.9.7"
SQLAlchemy = "2.0.20"
PyJWT = "^2.8.0"
bcrypt = "^4.0.1"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
pydantic = {version = "^2.2.1", extras = ["email"]}
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
alembic = "^1.11.3"
gunicorn = "^21.2.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
